# morpionscpp

./: CMakeLists.txt  README.md  main.cpp
include/: board.h  game.h  player.h  rule.h  rules.h
src/: board.cpp  game.cpp  main.cpp  player.cpp  rules.cpp
tests/: CMakeLists.txt  boardTest.cpp  gameTest.cpp  playerTest.cpp  ruleTest.cpp
